# Mycel

./: .gitignore  .gitmodules  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  install.sh
.changeset/: add-dir-workspace.md  fix-x-msh-platform-header.md  path-completion-reopen.md
.github/workflows/: monorepo-ci.yml
apps/kimi-code/: package.json
apps/kimi-code/src/cli/: commands.ts
apps/kimi-code/src/tui/: kimi-tui.ts
config/: AGENTS.md.template  mcp.json.template  mycel.config.toml.template
config/delegate/: settings.json.template  subagent-preamble.md
crates/mycel-cli/: Cargo.toml
crates/mycel-cli/src/: main.rs
crates/mycel-cli/tests/: antibody_add.rs  cli.rs  status.rs
crates/mycel-core/: Cargo.toml
crates/mycel-core/src/: decay.rs  lib.rs  pathguard.rs  projection.rs  promptpressure.rs  sclerotia.rs  selfspec.rs  spore.rs
crates/mycel-core/tests/: antibody_store.rs  eval_harness.rs  evaluation_engine.rs  sentinel_ingestion.rs  substrate_runtime.rs
crates/mycel-gate/: Cargo.toml
crates/mycel-gate/src/: main.rs
crates/mycel-gate/tests/: gate.rs
crates/mycel-mcp/: Cargo.toml
crates/mycel-mcp/src/: lib.rs
crates/mycel-mcp/tests/: server.rs  tools.rs
crates/mycel-observe/: Cargo.toml
crates/mycel-observe/src/: main.rs
crates/mycel-observe/tests/: observe.rs
crates/mycel-tests/: Cargo.toml
crates/mycel-tests/src/: lib.rs
crates/mycel-tests/tests/: adversarial_v0_1.rs  cross_mechanism.rs  decay_harness.rs  executable_specs_harness.rs  promptpressure_harness.rs  sclerotia_harness.rs  selfspec_harness.rs  sentinel_shadow_run.rs  spore_harness.rs
crates/mycel-tests/tests/fixtures/: adjacent_work_notices.jsonl  decay_cases.jsonl  executable_specs.jsonl  promptpressure_records.jsonl  sclerotia_records.jsonl  selfspec_cases.jsonl  selfspec_dupes.jsonl  spore_dupes.jsonl  spore_records.jsonl  wake_conditions.jsonl
docs/: AUDIT-v0.2-v0.5.md  VISION.md  interop-loss-matrix.md  open-questions.md  v0.3-blind-review-evidence.md
docs/adr/: 0001-substrate-format.md  0002-workspace-convention.md  0003-language-and-runtime.md  0004-skill-interop.md  0005-license.md  0006-harness-adoption.md  0008-time-injection.md  0009-decay-model.md  0010-promptpressure-import.md  0011-run-projections.md  0012-task-identity.md  0013-self-spec.md  0014-spec-executability.md  0015-sclerotia.md  0016-wake-conditions.md  0017-spore-manifest.md  0018-spore-catalog-and-export.md
docs/design/: p0-gate-seal.md
docs/plans/: 2026-07-19-harness-graft.md  v0.2-decay.md
docs/schemas/: antibody.md  eval-fixtures.md  sentinel-fields.md
docs/specs/: 2026-07-19-m2-antibody-ingestion.md  2026-07-19-mycel-harness-graft-design.md
harness/: flake.nix  package.json  pnpm-lock.yaml  vitest.config.ts
harness/.agents/skills/gen-changesets/: SKILL.md
harness/.agents/skills/gen-docs/: SKILL.md
harness/.changeset/: README.md  codex-subscription-auth.md  config.json  fix-afk-naming.md  fix-permission-copy-cli-acp.md  fix-permission-copy-web.md  fix-permission-mode-copy.md  fix-yolo-replay-copy.md  hook-fail-mode.md  web-foreground-default.md
harness/.github/workflows/: ci.yml
harness/apps/kimi-web/: index.html
harness/apps/kimi-web/src/: App.vue
harness/apps/kimi-web/src/components/: Sidebar.vue
harness/apps/kimi-web/src/composables/: usePageTitle.ts
harness/apps/kimi-web/src/i18n/: index.ts
harness/apps/kimi-web/src/views/: DesignSystemView.vue
harness/apps/kimi-web/test/: notification-logic.test.ts
harness/apps/mycel/: README.md  package.json
harness/apps/mycel/scripts/: dev-server-restart.mjs  dev.mjs
harness/apps/mycel/src/: main.ts
harness/apps/mycel/src/cli/: commands.ts  experimental-v2.ts  goal-prompt.ts  headless-exit.ts  options.ts  prompt-render.ts  prompt-session.ts  run-prompt.ts  run-shell.ts  telemetry.ts  version.ts
harness/apps/mycel/src/constant/: app.ts
harness/apps/mycel/src/migration/: command.ts  detect-pending.ts  index.ts  migration-screen.ts
harness/apps/mycel/src/native/: native-assets.ts
harness/apps/mycel/src/tui/: config.ts  kimi-tui.ts
harness/apps/mycel/src/utils/: paths.ts  plugin-marketplace.ts
harness/apps/mycel/test/: paths.test.ts
harness/apps/mycel/test/cli/: acp.test.ts  doctor.test.ts  export.test.ts  goal-prompt.test.ts  (+10 more)
harness/docs/.vitepress/: config.ts
harness/docs/en/: index.md
harness/docs/en/configuration/: config-files.md  env-vars.md  providers.md
harness/docs/en/customization/: hooks.md  plugins.md
harness/docs/en/reference/: tools.md
harness/docs/zh/: index.md
harness/docs/zh/configuration/: config-files.md  env-vars.md  providers.md
harness/docs/zh/customization/: hooks.md  plugins.md
harness/docs/zh/reference/: tools.md
harness/scripts/: check-nix-workspace.mjs
scripts/: mycel-delegate
tests/: FINDINGS.md
tests/e2e/: delegate-live.sh  gate-contract.sh  harness-gate-live.sh  immunity-loop.sh
(+104 files in other folders)
