[workspace]
members = [
  "crates/mycel-core",
  "crates/mycel-mcp",
  "crates/mycel-cli",
  "crates/mycel-tests",
  "crates/sentinel-guard",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/StressTestor/Mycel"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
