[package]
name = "mycel-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
# named mycel-substrate, not mycel: the `mycel` command is the harness (the
# thing users launch); this is the substrate management CLI beside it.
name = "mycel-substrate"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
mycel-core = { path = "../mycel-core" }
mycel-mcp = { path = "../mycel-mcp" }
serde_json.workspace = true
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
