[package]
name = "mycel-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"
