[package]
name = "mycel-gate"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "mycel-gate"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
mycel-core = { path = "../mycel-core" }
serde = { workspace = true }
serde_json.workspace = true

[dev-dependencies]
tempfile = "3"
uuid = { version = "1", features = ["v4"] }
