[package]
name = "mycel-mcp"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "mycel-mcp-server"
path = "src/bin/mycel_mcp_server.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
mycel-core = { path = "../mycel-core" }
serde.workspace = true
serde_json.workspace = true
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"
