[package]
name = "mycel-observe"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "mycel-observe"
path = "src/main.rs"

[dependencies]
chrono = "0.4"
serde = { workspace = true }
serde_json.workspace = true

[dev-dependencies]
mycel-core = { path = "../mycel-core" }
tempfile = "3"
