[package]
name = "mycel-tests"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
mycel-core = { path = "../mycel-core" }
mycel-mcp = { path = "../mycel-mcp" }
uuid = { version = "1", features = ["v4", "serde"] }
